--- a/smth_sshbbsd/Makefile.in
+++ b/smth_sshbbsd/Makefile.in
@@ -111,7 +111,7 @@ BBSCFILES = bbs.c record.c delete.c main.c stuff.c mail.c register.c \
            bm.c list.c goodbye.c bbsgopher.c fileshm.c postheader.c \
            convcode.c five.c tmachine.c addressbook.c\
            backnumber.c common.c sec_hand.c regular.c 1984.c moneycenter.c\
-	   editboard.c power_select.c
+	   editboard.c tmpl.c power_select.c
 
 
 SSHD_OBJS = sshd.o auth-passwd.o \
@@ -167,7 +167,7 @@ am__objects_2 = bbs.$(OBJEXT) record.$(OBJEXT) delete.$(OBJEXT) \
 	five.$(OBJEXT) tmachine.$(OBJEXT) addressbook.$(OBJEXT) \
 	backnumber.$(OBJEXT) common.$(OBJEXT) sec_hand.$(OBJEXT) \
 	regular.$(OBJEXT) 1984.$(OBJEXT) moneycenter.$(OBJEXT) \
-	editboard.$(OBJEXT) power_select.$(OBJEXT)
+	editboard.$(OBJEXT) tmpl.$(OBJEXT) power_select.$(OBJEXT)
 am__objects_3 = $(am__objects_2)
 am__objects_4 = sshd.$(OBJEXT) auth-passwd.$(OBJEXT) \
 	log-server.$(OBJEXT) canohost.$(OBJEXT) servconf.$(OBJEXT) \
@@ -353,6 +353,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/packet.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/postheader.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/power_select.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tmpl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/randoms.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/read.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/record.Po@am__quote@
