1. 加入libiconv-1.14源代码 2. 新增 gb2312/utf8 互转的方法 3. 在 nju09 的链接中加入 -liconv 选项 4. 删除 libghthash-0.5.0 文件夹

--- a/nju09/Makefile
+++ b/nju09/Makefile
@@ -1,17 +1,18 @@
 BASEPATH = ..
 include $(BASEPATH)/Makefile.Base
 YTMPATH = $(BBSHOME)/wwwtmp/ytml
-CGIPATH = /home/apache/cgi-bin/bbs
-HTMPATH = /home/apache/htdocs/bbs
+CGIPATH = /var/www/cgi-bin/bbs
+HTMPATH = /var/www/html/bbs
 
 ifdef GPROF
-LIBS	:= -lghthash -lfcgi -lz
+LIBS	:= -lghthash -lfcgi -lz -liconv
 CFLAGS	:= $(CFLAGS) $(OS_DEF) -DGPROF -pg -g
 else
 ifdef GPROF2
-LIBS    := -lghthash -lfcgi -lz 
+LIBS    := -lghthash -lfcgi -lz -liconv
 CFLAGS  := $(CFLAGS) $(OS_DEF) -DGPROF -pg -g
 else
+LIBS	:= -lghthash -lfcgi -liconv
 CFLAGS	:= $(CFLAGS) $(OS_DEF) -g
 endif
 endif
@@ -30,7 +31,7 @@ CFILE	= bbsmain.c bbstop10.c bbsdoc.c bbscon.c bbsbrdadd.c bbsboa.c bbsall.c bbs
 	bbshome.c bbsindex.c bbssechand.c bbsupload.c bbslform.c regreq.c \
 	bbsselstyle.c bbscon1.c bbsattach.c bbskick.c \
 	bbsscanreg.c bbsshowfile.c bbst.c bbsdt.c bbslt.c bbsincon.c bbssetscript.c \
-	bbscccmail.c bbsfwdmail.c bbstmpl.c bbsrss.c bbsucss.c bbsdefcss.c bbssecfly.c bbssbs.c bbseditmail.c
+	bbscccmail.c bbsfwdmail.c bbstmpl.c bbsrss.c bbsucss.c bbsdefcss.c bbssecfly.c bbssbs.c bbseditmail.c bbsapi.c
 	 CFILEBACKUP = bbsdmulan.c bbsdt.c bbsjs.c bbslt.c bbsmovie.c bbsnewleft.c bbssel.c bbst.c bbstty.c bbschat.c \
 	      ytml.c ytml_func.c bclass.c bbsusr.c bbsalluser.c
 
@@ -38,7 +39,7 @@ COBJS	:=$(CFILE:.c=.o)
 
 #OTHERS	= usesql.h BBSLIB.c boardrc.c deny_users.c bbsupdatelastpost.c bbsred.c tshirt.h
 OTHERS = BBSLIB.c boardrc.c deny_users.c bbsupdatelastpost.c bbsred.c 
-.c.o:	;  $(CC) -c $*.c -D_GNU_SOURCE $(CFLAGS) $(CPPFLAGS) $(WWW_CPPFLAGS) -DYTMPATH='"$(YTMPATH)"' -DHTMPATH='"$(HTMPATH)"' -Wall 
+.c.o:	;  $(CC) -c $*.c -D_GNU_SOURCE $(CFLAGS) $(CPPFLAGS) $(WWW_CPPFLAGS) -DYTMPATH='"$(YTMPATH)"' -DHTMPATH='"$(HTMPATH)"' -Wall $(LIBS)
 
 all: $(PROGNAME)
 
@@ -59,7 +60,7 @@ ifdef GPROF
 	$(CC)	--static -o $(PROGNAME)	$(COBJS) $(LIBS) BBSLIB.o -L$(BBSHOME)/bin -lytht  -lythtbbs -g -pg
 else
 ifdef GPROF2
-	$(CC)   -o $(PROGNAME)  $(COBJS) $(LIBS) BBSLIB.o -L$(BBSHOME)/bin -lytht -lythtbbs -g -pg
+	$(CC)   -o $(PROGNAME)  $(COBJS) $(LIBS) BBSLIB.o -L$(BBSHOME)/bin -lytht -lythtbbs -g -pg -l
 else
 	$(CC)	-o $(PROGNAME)	$(COBJS) $(LDFLAGS) $(LIBS) $(WWW_LIBS) BBSLIB.o $(BBSLIB)
 endif
