--- a/bbshome/etc/menu.ini
+++ b/bbshome/etc/menu.ini
@@ -430,6 +430,7 @@ screen       3, 0, S_SYSINFO
 title        0, 0, "œµÕ≥Œ¨ª§—°µ•"
 screen       3, 0, S_ADMIN
 @CheckForm   9, 16,PERM_ACCOUNTS,"Register",  "([1;32mR[m)egister   …Ë∂® π”√’ﬂ◊¢≤·◊ ¡œ"
+@Identify  0, 0, PERM_ESYSFILE,"Identify",   "([1;33mI[m)dentify    µ√˚—È÷§π‹¿Ì—°µ•(–¬)
 @EditSFiles  0, 0, PERM_ESYSFILE,"SysFiles",   "([1;33mS[m)ysFiles   ±‡º≠œµÕ≥µµ∞∏"
 @EditSFiles2  0, 0, PERM_ESYSFILE,"2SysFiles",   "([1;33m2[m)SysFiles   ±‡º≠œµÕ≥µµ∞∏2"
 @ModifyInfo  0, 0, PERM_SYSOP,   "Info",        "([1;32mI[m)nfo       –ﬁ∏ƒ π”√’ﬂ◊ ¡œ"
