--- a/bbshome/etc/menu.ini
+++ b/bbshome/etc/menu.ini
@@ -430,7 +430,7 @@ screen       3, 0, S_SYSINFO
 title        0, 0, "ฯตอณฮฌปคักตฅ"
 screen       3, 0, S_ADMIN
 @CheckForm   9, 16,PERM_ACCOUNTS,"Register",  "([1;32mR[m)egister   ษ่ถจสนำรี฿ืขฒแืสมฯ"
-@Identify  0, 0, PERM_ESYSFILE,"Identify",   "([1;33mI[m)dentify   สตร๛ั้ึคนÜภํักตฅ(ะย)
+@Identify  0, 0, PERM_ACCOUNTS,"Identify",   "([1;33mI[m)dentify   สตร๛ั้ึคนÜภํักตฅ(ะย)
 @EditSFiles  0, 0, PERM_ESYSFILE,"SysFiles",   "([1;33mS[m)ysFiles   ฑเผญฯตอณตตฐธ"
 @EditSFiles2  0, 0, PERM_ESYSFILE,"2SysFiles",   "([1;33m2[m)SysFiles   ฑเผญฯตอณตตฐธ2"
 @ModifyInfo  0, 0, PERM_SYSOP,   "Info",        "([1;32mI[m)nfo       ะÞธฤสนำรี฿ืสมฯ"
