--- a/Makefile.Base
+++ b/Makefile.Base
@@ -28,7 +28,7 @@ BBSGRP=999
 
 OS_DEF   = -DLINUX
 CC       = gcc
-CFLAGS   = -Wall -O2 -mmmx -msse -pipe -DCONF_HAVE_OPENPTY -I$(BASEPATH)/include -I$(BASEPATH)/ythtlib -I$(BASEPATH)/libythtbbs
+CFLAGS   = -Wall -O2 -mmmx -msse -pipe -DCONF_HAVE_OPENPTY -I$(BASEPATH)/include -I$(BASEPATH)/ythtlib -I$(BASEPATH)/libythtbbs -L/usr/lib/mysql -lmysqlclient
 CPPFLAGS =  -I/usr/include/mysql -DENABLE_MYSQL
 CFLAGSTEST   = -Wall -pipe -DCONF_HAVE_OPENPTY -I$(BASEPATH)/include -I$(BASEPATH)/ythtlib -I$(BASEPATH)/libythtbbs -g
 #CFLAGSTEST   = -pipe -DCONF_HAVE_OPENPTY -I$(BASEPATH)/include -I$(BASEPATH)/ythtlib -I$(BASEPATH)/libythtbbs -g -pg -static 
