--- a/nju09/Makefile
+++ b/nju09/Makefile
@@ -9,10 +9,10 @@ LIBS	:= -lghthash -lz -L/usr/lib/mysql -lmysqlclient
 CFLAGS	:= $(CFLAGS) $(OS_DEF) -DGPROF -pg -g
 else
 ifdef GPROF2
-LIBS    := -lghthash -lz 
+LIBS    := -lghthash -lz -L/usr/lib/mysql -lmysqlclient
 CFLAGS  := $(CFLAGS) $(OS_DEF) -DGPROF -pg -g
 else
-LIBS	:= -lghthash 
+LIBS	:= -lghthash -L/usr/lib/mysql -lmysqlclient
 CFLAGS	:= $(CFLAGS) $(OS_DEF) -g
 endif
 endif
