--- a/smth_sshbbsd/Makefile.am
+++ b/smth_sshbbsd/Makefile.am
@@ -25,7 +25,7 @@ BBSCFILES = bbs.c record.c delete.c main.c stuff.c mail.c register.c \
            bm.c list.c goodbye.c bbsgopher.c fileshm.c postheader.c \
            convcode.c five.c tmachine.c addressbook.c\
            backnumber.c common.c sec_hand.c regular.c 1984.c moneycenter.c\
-	   editboard.c tmpl.c power_select.c
+	   editboard.c tmpl.c power_select.c identify.c
 
 BBSOBJS = $(BBSCFILES:.c=.o)
 
