make install 里头包括下穿梭有关的两个程序

--- a/src/Makefile
+++ b/src/Makefile
@@ -103,6 +103,8 @@ install: all
 	$(MAKE) installbbsd
 	$(MAKE) installthread
 	$(MAKE) installchatd
+	$(MAKE) installbbsnet
+	$(MAKE) installtelnet
 
 installbbs: $(PROGNAME) $(BBSHOME)/bin/bbs
 $(BBSHOME)/bin/bbs: bbs
