bug fixed: 删除文件 若浏览器采用utf8对url编码，可能删除文件会失败，已在firefox下测试通过

--- a/nju09/Makefile
+++ b/nju09/Makefile
@@ -99,7 +99,7 @@ test_ytml:test_ytml.c ytml.c ytml_func.c
 	$(CC) $(CFLAGS) -o test_ytml $^ -L$(BBSHOME)/bin -lytht
 
 upload: upload.c
-	$(CC) $(CFLAGS) -o $@ $^ -L$(BBSHOME)/bin -lytht
+	$(CC) $(CFLAGS) -o $@ $^ -L$(BBSHOME)/bin -lytht -lythtbbs
 
 clean:
 	rm -rf $(COBJS) $(PROGRNAME) *.o
